# tufty_system_monitor

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.sh  docker-compose.yml  main.cpp
.github/workflows/: build.yml
tufty_sysmon_server/: Cargo.toml
tufty_sysmon_server/src/: hwstats.rs  main.rs  port.rs  sysinfo.rs
