[package]
name = "tufty_sysmon_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4.5"
serde = "^1.0.143"
serde_derive = "^1.0.143"
serde_json = "^1.0.83"
tokio = { version = "^1.20", features = ["full"] }
tokio-serial = "^5.4.3"
wmi = "^0.11"
